WebView.htm doesnt offer Wroclaw as its not supported yet

--- a/data/WebView.htm
+++ b/data/WebView.htm
@@ -135,7 +135,7 @@
                         <label class="sr-only" for="city">Miasto:</label>    
                         <select class="form-control" id="city" name="city">
                             <option>Krakow</option>
-                            <option>Wroclaw</option>
+                            <!-- <option>Wroclaw</option> -->
                         </select>
                     </div>
              
