--- a/data/MobileWebView.htm
+++ b/data/MobileWebView.htm
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+
     <title>DwellingDigger</title>
     <style type="text/css"> 
         html {height:100%}
@@ -19,8 +19,8 @@
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
     <!-- Latest compiled JavaScript -->
+
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     
     <!-- Google maps -->
@@ -45,15 +45,12 @@
             var html = "<b>" + offerGroup.address + "</b> <br/>";
             for (var i in offers) {
                 var offer = offers[i];
+                var numRooms = offer.num_rooms == 1 ? "1 pokój" : "" + offer.num_rooms + " pokoje";
                 html += "<br />";
-                html += "<b>" + offer.price + "</b>" + ", " + offer.date + "<br/>";
-                //html += offer.title + "<br/>";
-                //html += offer.address_section + "<br/>";
-                //html += offer.summary + "<br/>";
-                html += '<a href="' + offer.url + '" target="_blank">Link</a><br/>';
+                html += "<b>" + offer.price + "</b>" + ", " + offer.date + ", " + numRooms + ", " + offer.area + "m2 " + '<a href="' + offer.url + '" target="_blank">Link</a><br/>';
             }
             return html;
-        }   
+        }    
          
         // Create offer map instance. It s a google map crammed into given container,
         // centred at given latitude,longitude, with given zoom applied
