--- a/data/WebView.htm
+++ b/data/WebView.htm
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="pl" xmlns="http://www.w3.org/1999/xhtml"> 
-  <head>
+  <head> 
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -43,8 +43,8 @@
         function getBaloonHtmlForGroup(offerGroup) {
             var offers = offerGroup.offers;
             var html = "<b>" + offerGroup.address + "</b> <br/>";
-            for (var i in offers) {
-                var offer = offers[i];`
+            for (var i in offers) { 
+                var offer = offers[i];
                 var numRooms = offer.num_rooms == 1 ? "1 pokój" : "" + offer.num_rooms + " pokoje";
                 html += "<br />";
                 html += "<b>" + offer.price + "</b>, " + numRooms + ", " + offer.area + "m2, " + offer.date + "<br/>";
